--- a/src/index.css
+++ b/src/index.css
@@ -13,10 +13,20 @@ body {
     display: grid;
     place-content: center;
     min-height: 100vh;
-    background: rgb(164, 63, 251);
-    background: linear-gradient(
-        42deg,
-        rgba(164, 63, 251, 1) 0%,
-        rgba(252, 70, 107, 1) 100%
-    );
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    height: 100vh;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
